# graspi

./: .gitignore  .pylintrc  README.md  ReadmeCythonizedGraspi.txt  default.nix  setup.cfg  setup.py  shell.nix
docs/: basicDefinitions.html  basicOperationsOnGraphs.html  build.html  conf.py  credit.html  exampleOfUsage.html  genindex.html  graphBasedRepresentation.html  graspiFunctionality.html  index.html  inputFormats.html  listOfDescriptors.html  objects.inv  search.html  searchindex.js
docs/_sources/: basicDefinitions.rst.txt  build.rst.txt  credit.rst.txt  exampleOfUsage.rst.txt  graspiFunctionality.rst.txt  index.rst.txt  inputFormats.rst.txt  listOfDescriptors.rst.txt
docs/api/: class_view_hierarchy.html  classgraspi_1_1connect__color__green.html  classgraspi_1_1connect__same__color.html  (+99 more)
graspi/: __init__.py  graspi.cpp  graspi.pxd
skel_examples/: skeletal_descriptors.pptx
src/: branch_extraction.hpp  graph_cc.hpp  graph_constructors.cpp  graph_constructors.hpp  graph_dijkstra.hpp  graph_io.hpp  graspi.hpp  graspiAPI.hpp  graspi_cc.hpp  graspi_descriptors.hpp  graspi_predicates.hpp  graspi_types.hpp  main.cpp  mainAPI.cpp  mainSKEL.cpp  node_identification.hpp  performance_indicators.hpp  performance_indicators_abs.hpp  performance_indicators_charge_transport.hpp  performance_indicators_diss.hpp  skeletal-descriptors.hpp  skeletal_descriptors.hpp  skeletonization.hpp  thinning.cpp  thinning2D.hpp  time_check.hpp
srcDocs/: Makefile  basicOperationsOnGraphs.rst  conf.py  exampleOfUsage.rst  graphBasedRepresentation.rst  index.rst  listOfDescriptors.rst
(+665 files in other folders)
