[metadata]
name = graspi
description-file = README.md
description = Tool for morphology analysis
author = Olga Wodo
author_email = olgawodo@buffalo.edu
url = https://owodolab.github.io/graspi/
version = 0.0

[options]
install_requires =
    cython
    numpy
    pytest-cov
    pytest
    toolz
    pandas

[flake8]
ignore = E731, W503
max-line-length = 88

[tool:pytest]
testpaths = graspi
addopts = --doctest-modules --ignore=setup.py -r s --cov=graspi --cov-report term-missing --no-cov-on-fail
